[tool.poetry]
name = "science"
version = "0.1.0"
description = "Very basic utilities for running experiments"
authors = ["Lucas Saldyt <lucassaldyt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
rich = "^13.7.0"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
